# pydantic-ulid-mypy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pydantic_ulid_mypy/: application.py  models.py
tests/: test_application.py
